--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-pyrogram==2.0.33
-html_telegraph_poster==0.5.0
-TgCrypto=1.2.5
-psutil=5.9.6
-pymongo[srv]=1.1.0
-aiohttp=3.9.1
-python-dotenv
-hachoir
+aiohttp
 anitopy
-pyromod
 asyncio
-ffmpeg==1.4
+hachoir
+html_telegraph_poster
+pymongo[srv]
+psutil
+pyrogram==2.0.106
+pyromod
+python-dotenv
+tgcrypto
