--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-aiohttp
-anitopy
-asyncio
-hachoir
-html_telegraph_poster
-pymongo[srv]
-psutil
-pyrogram==2.0.106
-pyromod
+pyrogram==2.0.33
+html_telegraph_poster==0.5.0
+TgCrypto=1.2.5
+psutil=5.9.6
+pymongo[srv]=1.1.0
+aiohttp=3.9.1
 python-dotenv
-tgcrypto
+hachoir
+anitopy
+pyromod
+asyncio
+ffmpeg==1.4
