--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 pyrogram==2.0.33
 html_telegraph_poster==0.5.0
-TgCrypto=1.2.5
-psutil=5.9.6
-pymongo[srv]=1.1.0
-aiohttp=3.9.1
+TgCrypto==1.2.5
+psutil==5.9.6
+pymongo[srv]==1.1.0
+aiohttp==3.9.1
 python-dotenv
 hachoir
 anitopy
