--- a/config.env
+++ b/config.env
@@ -1,10 +1,10 @@
-API_ID = 
-API_HASH = ""
+API_ID = 27190467
+API_HASH = "ff6bc6ad2faba520f426cf04ca7f5773"
 
-BOT_TOKEN = ""
+BOT_TOKEN = "7227008403:AAFvbjNP7-7rCSGyuYzxxA5Zz5lDXxsNWQs"
 
-DATABASE_URL = ""
-BOT_USERNAME = ""
+DATABASE_URL = "mongodb+srv://BashBot02:BashBot@bashbot.8uzlxey.mongodb.net/?retryWrites=true&w=majority"
+BOT_USERNAME = "Test_encoder_bot"
 
-LOG_CHANNEL = 
-OWNER = 
+LOG_CHANNEL = -1002165431153
+OWNER = 5574593875
